# ros2-esp32-rover-stack

./: .gitignore  README.md  rpicam_bridge.py
firmware/Rover/: platformio.ini
firmware/Rover/src/: main.cpp  main.cpp.bak  main1.cpp.bak
microros_ws/src/rover_bringup/: package.xml  setup.py
microros_ws/src/rover_bringup/config/: aprilgrid.yaml  camchain-imucam-kalibr_data.yaml  camchain-imucam-kalibr_data2.yaml  camchain-imucam-kalibr_data6.yaml  camchain-imucam-kalibr_data7.yaml  camchain-imucam-kalibr_data8.yaml  camchain-kalibr_data.yaml  camchain-kalibr_data2.yaml  camchain-kalibr_data6.yaml  camchain-kalibr_data7.yaml  camchain-kalibr_data8.yaml  converter.py  custom_camera_info.yaml  ekf.yaml  evofox.yaml  imu-kalibr_data2.yaml  imu-kalibr_data6.yaml  imu.yaml  inject_imu.py  results-cam-kalibr_data.txt  results-cam-kalibr_data2.txt  results-cam-kalibr_data6.txt  results-cam-kalibr_data7.txt  results-cam-kalibr_data8.txt  results-imucam-kalibr_data.txt  results-imucam-kalibr_data2.txt  results-imucam-kalibr_data6.txt  results-imucam-kalibr_data7.txt  results-imucam-kalibr_data8.txt  vslam.yaml
microros_ws/src/rover_bringup/launch/: rover.launch.py  vslam.launch.py
microros_ws/src/rover_bringup/scripts/: depth_preview.py  start_rover.sh
microros_ws/src/rover_calibration/: CMakeLists.txt  package.xml
microros_ws/src/rover_calibration/src/: rotation_driver.cpp  square_driver.cpp  straight_line_driver.cpp
microros_ws/src/rover_odom/: CMakeLists.txt  package.xml
microros_ws/src/rover_odom/src/: tick_to_odom.cpp
